[package]
name = "oxideav-mp4"
version = "0.0.8"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-mp4"
authors = ["Mark Karpeles"]
description = "Pure-Rust MP4 / ISO base media file container for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-mp4"
keywords = ["multimedia", "mp4", "iso-bmff", "container", "pure-rust"]
categories = ["multimedia::video", "parser-implementations"]

[dependencies]
oxideav-core = "0.1"
# AES-128 cryptographic primitives for the CENC (ISO/IEC 23001-7)
# cipher driver. Pure cipher building blocks — not container or codec
# implementations.
aes = "0.8"
cbc = "0.1"
ctr = "0.9"

[dev-dependencies]
oxideav-basic = "0.0"
oxideav-flac = "0.0"
oxideav-mjpeg = "0.1"
